--- a/_tmux.conf
+++ b/_tmux.conf
@@ -51,7 +51,7 @@ set -g status-interval 1
 
 # Set status bar content
 set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
-set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
+set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") uptime #[fg=blue,bg=default]%Y-%m-%d %H:%M:%S'
 
 # Increase scrollback lines
 set -g history-limit 10000
@@ -63,13 +63,13 @@ set-option -g status-fg colour136 #yellow
 set-option -g status-attr default
 
 # default window title colors
-set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-fg colour244 #grey
 set-window-option -g window-status-bg default
 set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-bg colour244 #grey
 set-window-option -g window-status-current-attr bright
 
 # pane border
